<resources>
    <string name="app_name">Add Student</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_time">* Next time admission number will be auto incremented based on your number</string>
    <string name="admission_number">Starting admission number*</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="facility">Facility</string>
    <string name="qualification">Parent Qualification</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="guardians">Guardians:</string>
    <string name="decrease">-</string>
    <string name="_0">0</string>
    <string name="increase">+</string>
    <string name="next">Submit</string>
    <string name="logo">logo</string>
    <string name="dpsblr1800001">DPSBLR1800001</string>
    <string name="name_of_student">Name of student</string>
    <string name="select_date_of_birth">Select date of birth*</string>
    <string name="gender">Gender</string>
    <string name="boy">BOY</string>
    <string name="girl">GIRL</string>
    <string name="other">OTHER</string>
    <string name="select_religion">Religion*</string>
    <string name="nationality">Nationality*</string>
    <string name="community">Community</string>
    <string name="sc_st">SC/ST</string>
    <string name="obc">OBC</string>
    <string name="gen">GEN</string>
    <string name="aadhar_number">Aadhar Number*</string>
    <string name="language_known">Language known*</string>
    <string name="mother_tongue">Mother Tongue*</string>
    <string name="academic_information">Academic Information</string>
    <string name="birth_certificate_number">Birth certificate number*</string>
    <string name="previous_school_name">Previous school name</string>
    <string name="previous_school_address">Previous school City</string>
    <string name="previous_school_contact_number">School contact number</string>
    <string name="previous_school_affliated_to">Affliated to</string>
    <string name="sslc">SSLC</string>
    <string name="cbse">CBSE</string>
    <string name="icse">ICSE</string>
    <string name="transfer_certificate_number">Transfer certificate Number*</string>
    <string name="previous_class_or_grade">Previous class %</string>
    <string name="submit">Submit</string>
    <string name="medical_info">Medical Information</string>
    <string name="imageforshowview">imageforshowView</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eye">Eye</string>
    <string name="left_eye_vision">Short Eye Vision</string>
    <string name="right_eye_vision">Long Eye Vision</string>
    <string name="color_vision">Color Vision</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="if_yes_then_comments">If yes then Comments</string>
    <string name="wear_glass">Wear Glass</string>
    <string name="comments_on_eye">Comments on eye</string>
    <string name="teeth">Teeth</string>
    <string name="cavity">Cavity</string>
    <string name="sensivity">Sensivity</string>
    <string name="teeth_alignment">Teeth Alignment</string>
    <string name="comments_on_teeth">Comments on teeth</string>
    <string name="ear">Ear</string>
    <string name="right_ear_frequency">Right ear frequency</string>
    <string name="left_ear_frequency">Left ear frequency</string>
    <string name="hearing_difficulty">Hearing Difficulty</string>
    <string name="comments_on_ear">Comments on Ear</string>
    <string name="comments_on_disability">Comments on Disability</string>
    <string name="none">None</string>
    <string name="disability">Disability</string>
    <string name="visual">Visual</string>
    <string name="hearing_and_speech">Hearing And Speech</string>
    <string name="physical">Physical</string>
    <string name="calendarfordob">calendarForDob</string>
    <string name="father_information">Father Information</string>
    <string name="clickbutton">clickButton</string>
    <string name="father_name">First Name*</string>
    <string name="father_mobile_number">Mobile Number*</string>
    <string name="father_email_id">Email id*</string>
    <string name="mother_information">Mother Information</string>
    <string name="mother_name">Name*</string>
    <string name="age">Age</string>
    <string name="mother_qualification">Qualification</string>
    <string name="occupation">Occupation</string>
    <string name="designation">Designation</string>
    <string name="mother_mobile_number">Mobile Number*</string>
    <string name="aadhar_card_number">Aadhar card number*</string>
    <string name="mother_email_id">Email id*</string>
    <string name="guardians_information">Guardians Information</string>
    <string name="student_documents">Student Documents</string>
    <string name="father_documents">Father Documents</string>
    <string name="mother_documents">Mother Documents</string>
    <string name="guardians_documents">Guardians Documents</string>
    <string name="studentimage">studentimage</string>
    <string name="attach_aadhar_card">Aadhar card</string>
    <string name="attach_birth_certificate">Birth certificate*</string>
    <string name="attach_transfer_certificate">Transfer certificate</string>
    <string name="attach_previous_school_marksheet">Previous school marksheet number*</string>
    <string name="attach_current_address_proof">Current address proof number*</string>
    <string name="select_pdf_from_gallery">Select pdf from gallery</string>
    <string name="click_from_camera">Click from camera</string>
    <string name="imgNumber">img_</string>
    <string name="parent_address">Parent Address</string>
    <string name="present_address">Present Address*</string>
    <string name="locality_name">Locality Name</string>
    <string name="city_and_state">City and State</string>
    <string name="country_and_pincode">Country and Pincode</string>
    <string name="contact_number">Contact Number*</string>
    <string name="same_as_present_address">Same as present address</string>
    <string name="current_address">Current Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="guardians_address">Guardians Address</string>
    <string name="guardian_address">Guardian Address</string>
    <string name="food_facility">Food Facility</string>
    <string name="transport_facility">Transport Facility</string>
    <string name="first_name">First Name*</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name*</string>
    <string name="caste">Caste*</string>
    <string name="subcaste">Subcaste</string>
    <string name="d_o_b">D.O.B</string>
    <string name="id_number">ID number</string>
    <string name="select_from_camera">select from camera</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="select_pdf">select pdf</string>
    <string name="studentPercent">Student %</string>
    <string name="select_below_details">Select below details</string>
    <string name="custom_dialog_two">custom_dialog_two</string>
    <string name="please_enter_your_name">please_enter_your_name</string>
    <string name="please_enter_your_password">please_enter_your_password</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="health_information">Health Information</string>
    <string name="family">Family</string>
    <string name="document">Document</string>
    <string name="address">Address</string>
    <string name="student">Student</string>
    <string name="enter_minimum_required_for_admission">Percentage required for admission*</string>
    <string name="id_card">ID card*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="pincode">Pincode*</string>
    <string name="country">Country*</string>
    <string name="permanent_street">Permanent Address</string>
    <string name="present_street">Present address*</string>
    <string name="show_route">Show Route</string>
    <string name="confirm">Confirm</string>
    <string name="your_nearby_stop">Your nearby stop-</string>
    <string name="stop_distance">Stop distance-</string>
    <string name="stop_number">Stop Number-</string>
    <string name="stop_to_school_distance">Stop to School distance-</string>
    <string name="transport_charge">Transport charge-</string>
    <string name="or">Or</string>
    <string name="select_from_below">Select from below</string>
    <string name="your_selected_stop">Your Selected stop</string>
    <string name="apply_for_transport_service">Apply for transport service</string>
    <string name="set_barrier">Set Barrier</string>
    <string name="new_admsn">New Admsn</string>
    <string name="_1">1</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="alphabetComma">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz,</string>
    <string name="alphabetSpace">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"\". </string>
    <string name="alphabetNumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="alphabetNumeric1">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 " "</string>
    <string name="email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@_.</string>
    <string name="id_aadhar_number">ID/Aadhar Number*</string>
    <string name="EyeVision">0123456789+-.</string>
    <string name="guardian">Guardian</string>
    <string name="guardian_name">Guardian Name*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="_1000">1000</string>
    <string name="save">Save</string>
    <string name="change_address">Change address</string>
    <string name="permanent">Pincode</string>
    <string name="permanent_city">City</string>
    <string name="permanent_state">State</string>
    <string name="permanent_country">Country</string>
    <string name="permanent_contact_number">Contact Number</string>
    <string name="guardian_email">Email*</string>
    <string name="current_address_proof">Current address proof</string>
    <string name="previous_class">Previous Class</string>
    <string name="guardianProfilePicture">guardianProfileImage</string>
    <string name="guardianProfileAadharImageFront">guardianAadharImageFront</string>
    <string name="guardianProfileAadharImageBack">guardianAadharImageBack</string>
    <string name="guardianCurrentAddressImageFront">guardianAadharImageFront</string>
    <string name="guardianCurrentAddressImageBack">guardianAadharImageFront</string>
    <string name="add_siblings">Add Siblings</string>
    <string name="registration_number">registrationNumber</string>
    <string name="student_name">Student name</string>
    <string name="add_sibling">Add Sibling</string>
    <string name="speech">Speech</string>
    <string name="hearing">Hearing</string>
    <string name="kilogram">Kilogram</string>
    <string name="centimeter">Centimeter</string>
    <string name="name">Name</string>
    <string name="std_class">Class</string>


</resources>
