<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/student"
        android:title="@string/student"
        android:enabled="true"
        android:icon="@drawable/icon_person_empty"
        />

    <item
        android:id="@+id/family"
        android:title="@string/family"
        android:enabled="true"
        android:icon="@drawable/icon_family_empty"
        />


    <item
        android:id="@+id/address"
        android:title="@string/address"
        android:enabled="true"
        android:icon="@drawable/ic_location_pin" />

    <item
        android:id="@+id/facility"
        android:title="@string/facility"
        android:enabled="true"
        android:icon="@drawable/icon_tranpo_empty" />
</menu>