<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/guardianNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/guardian"
        android:textSize="@dimen/text17sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mar_padd_5dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/guardianAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/present_address"
            android:maxLength="70"/>


    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">
            <EditText
                android:id="@+id/guardianAddressPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLength="6"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">
            <EditText
                android:id="@+id/guardianAddressCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:digits="@string/alphabetSpace"/>


        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">
            <EditText
                android:id="@+id/guardianAddressState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:digits="@string/alphabetSpace"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">
            <EditText
                android:id="@+id/guardianAddressCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:digits="@string/alphabetSpace"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</LinearLayout>